carroussel added to show of the bar, changes in profile as well

--- a/app/assets/stylesheets/components/_banner-bar.scss
+++ b/app/assets/stylesheets/components/_banner-bar.scss
@@ -5,3 +5,13 @@
   align-items: center;
   margin-top: 0px !important;
 }
+
+.h3-responsive {
+  font-family: $bebas;
+  font-size: 13em;
+  text-align: left;
+  position: absolute;
+  top: -380px;
+  left: -150px;
+  color: white;
+}
