--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   </head>
   <body>
     <%= render 'shared/navbar' %>
@@ -15,7 +16,7 @@
       <%= render 'shared/register' %>
 
       <%= yield %>
-    
+
     <br><br><br>
     <%= render 'shared/footer' %>
     <%= javascript_include_tag 'application' %>
