gradient / mask : fail. partial banners ok

--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -1,120 +1,4 @@
-  <!--Default banners when 0 or 1 pic only -->
-
-<% if !@pictures[0]%>
-
-  <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/../../assets/images/bar-banner-pl.jpg);">
-    <div class="container">
-      <h1><%= @bar[:name].capitalize %></h1>
-      <h3><%= @bar[:description] %></h3>
-      <p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
-      <h3><% if current_user.profile && (current_user.bars.empty? && current_user.profile.is_artist) %>
-        <%= link_to "Contact this bar !", profile_chatboxes_path(@bar.user.profile), method: :post, class:"b-border-tbg" %>
-        <% end %></h3>
-    </div>
-  </div>
-
-<%end%>
-
-<% if @pictures[0] && !@pictures[1]%>
-
-  <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @pictures[0].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>');">
-    <div class="container">
-      <h1><%= @bar[:name].capitalize %> </h1>
-      <h3><%= @bar[:description] %></h3>
-      <p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
-      <h3><% if current_user.profile && (current_user.bars.empty? && current_user.profile.is_artist) %>
-        <%= link_to "Contact this bar !", profile_chatboxes_path(@bar.user.profile), method: :post, class:"b-border-tbg" %>
-        <% end %></h3>
-    </div>
-  </div>
-
-<%end%>
-<!--//Default banners when 0 or 1 pic only -->
-
-
-<!--Carousel Wrapper-->
-<% if @pictures[0] && @pictures[1]%>
-
-  <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
-      <!--Indicators-->
-      <ol class="carousel-indicators">
-          <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-2" data-slide-to="1"></li>
-          <li data-target="#carousel-example-2" data-slide-to="2"></li>
-          <li data-target="#carousel-example-2" data-slide-to="3"></li>
-          <li data-target="#carousel-example-2" data-slide-to="4"></li>
-
-      </ol>
-      <!--/.Indicators-->
-      <!--Slides-->
-      <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-              <div class="view">
-              <%= cl_image_tag @pictures[0].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
-                  <div class="mask rgba-black-light"></div>
-              </div>
-              <div class="carousel-caption">
-                  <h3 class="h3-responsive"><%= @bar[:name].capitalize %></h3>
-              </div>
-          </div>
-          <div class="carousel-item">
-              <!--Mask color-->
-              <div class="view">
-                <%= cl_image_tag @pictures[1].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
-                  <div class="mask rgba-black-strong"></div>
-              </div>
-              <div class="carousel-caption">
-                  <h3 class="h3-responsive"><%= @bar[:name].capitalize %></h3>
-              </div>
-          </div>
-          <% if @pictures[2]%>
-            <div class="carousel-item">
-                <!--Mask color-->
-                <div class="view">
-                  <%= cl_image_tag @pictures[2].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
-                    <div class="mask rgba-black-slight"></div>
-                </div>
-                <div class="carousel-caption">
-                  <h3 class="h3-responsive"><%= @bar[:name].capitalize %></h3>
-                </div>
-            </div>
-          <%end%>
-          <% if @pictures[3]%>
-            <div class="carousel-item">
-                <!--Mask color-->
-                <div class="view">
-                  <%= cl_image_tag @pictures[3].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
-                    <div class="mask rgba-black-slight"></div>
-                </div>
-                <div class="carousel-caption">
-                    <h3 class="h3-responsive"><%= @bar[:name].capitalize %></h3>
-                </div>
-            </div>
-          <%end%>
-          <% if @pictures[4]%>
-            <div class="carousel-item">
-                <!--Mask color-->
-                <div class="view">
-                  <%= cl_image_tag @pictures[4].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
-                    <div class="mask rgba-black-slight"></div>
-                </div>
-                <div class="carousel-caption">
-                    <h3 class="h3-responsive"><%= @bar[:name].capitalize %></h3>
-                </div>
-            </div>
-          <%end%>
-      </div>
-      <!--/.Slides-->
-      <!--Control next-->
-      <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-      </a>
-      <!--/.Controls-->
-  </div>
-<%end%>
-<!--/.Carousel Wrapper-->
-
+<%= render 'bar-banner'%>
 
 <!-- Main page, under banner or carroussel-->
 
