--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -30,7 +30,7 @@
             <p><%= link_to 'Edit my profile', edit_profile_path(@profile), class: "btn" %></p>
         <%end%>
 
-          <% if !current_user.bars.empty? && @profile.is_artist %>
+          <% if current_user.profile.is_bar_manager && @profile.is_artist %>
             <%= link_to 'Create an event with this artist!', new_profile_event_path(@profile), class: "btn" %>
           <% end %>
 
