--- a/app/views/bars/_bar-banner.html.erb
+++ b/app/views/bars/_bar-banner.html.erb
@@ -1,11 +1,19 @@
   <!--Default banners when 0 or 1 pic only -->
 <% if !@pictures[0]%>
 
-  <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/../../assets/images/bar-banner-pl.jpg);">
+  <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/oXOIH4UAixo/1200x600" alt="First slide);">
     <div class="container">
       <h1><%= @bar[:name].capitalize %></h1>
       <h3><%= @bar[:description] %></h3>
-      <p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
+      <% if current_user == @bar.user %>
+
+        <br><br><p><%= link_to 'Add pictures', new_bar_picture_path(@bar), class:"bw-border-tbg" if current_user == @bar.user %></p>
+
+      <% else %>
+
+        <br><br><p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
+      <%end%>
+
       <h3><% if current_user.profile && (current_user.bars.empty? && current_user.profile.is_artist) %>
         <%= link_to "Contact this bar !", profile_chatboxes_path(@bar.user.profile), method: :post, class:"b-border-tbg" %>
         <% end %></h3>
@@ -111,5 +119,14 @@
       </a>
       <!--/.Controls-->
   </div>
-<%end%>
+
 <!--/.Carousel Wrapper-->
+
+  <div class="container">
+    <br><h3><%= @bar[:description] %></h3>
+    <p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
+    <h3><% if current_user.profile && (current_user.bars.empty? && current_user.profile.is_artist) %>
+          <%= link_to "Contact this bar !", profile_chatboxes_path(@bar.user.profile), method: :post, class:"b-border-tbg" %>
+        <% end %></h3>
+  </div>
+<%end%>
