--- a/app/views/bars/_bar-banner.html.erb
+++ b/app/views/bars/_bar-banner.html.erb
@@ -30,7 +30,7 @@
       <h3><%= @bar[:description] %></h3>
       <p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
       <h3><% if current_user.profile && (current_user.bars.empty? && current_user.profile.is_artist) %>
-        <%= link_to "Contact this bar !", profile_chatboxes_path(@bar.user.profile), method: :post, class:"b-border-tbg" %>
+        <%= link_to "Contact this bar !", profile_chatboxes_path(@bar.user.profile), class:"b-border-tbg" %>
         <% end %></h3>
     </div>
   </div>
