--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -2,8 +2,8 @@
   <%= f.error_notification %>
 
   <%= f.input :name %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
+  <%= f.input :start_date, order: [:day, :month, :year] %>
+  <%= f.input :end_date, order: [:day, :month, :year] %>
   <%= f.input :description %>
 
 
