--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,13 +4,15 @@
     <% end %>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
-        <li class="nav-item active">
+        <% if user_signed_in? %>
+          <%if current_user.profile.is_artist || current_user.profile.is_bar_manager %>
+            <li class="nav-item active">
           <%= link_to "Dashboard", dashboard_profile_path(current_user.profile), class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Messages", chatboxes_path, class: "nav-link" %>
-        </li>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Messages", chatboxes_path, class: "nav-link" %>
+          </li>
+        <% end %>
         <li class="nav-item dropdown">
           <%= image_tag "http://download.seaicons.com/icons/cedarseed/cocktails/128/Negroni-icon.png", class: "avatar-icon dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -19,7 +21,6 @@
               <%= link_to "My profile", profile_path(current_user.profile), class: "dropdown-item" %>
             <%end%>
 
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
