--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -1,24 +1,23 @@
 <h1>Unconfirmed Events</h1>
 
-
 <% @unconfirmed_events.each do |event| %>
 
-<div class="card-product">
-  <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
-  <div class="card-product-infos">
-    <h2><%= event.name %></h2>
-    <p><%= event[:description] %></p>
-    <p><%= link_to 'See more details', event_path(event) %></p>
-    <% if current_user.profile.is_artist %>
-       <%= link_to "Confirm event", confirm_event_path(event), class: "b-border-tbg" %>
-    <% end %>
-    <% if current_user.profile.is_bar_manager %>
-      <p><%= link_to 'Edit event', edit_event_path(event) %></p>
-      <p><%= link_to 'Delete event', event_path(event), method: :delete, data: { confirm: "Are you sure?" } %></p>
-    <%end%>
+  <div class="card-product">
+    <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
+    <div class="card-product-infos">
+      <h2><%= event.name %></h2>
+      <p><%= event[:description] %></p>
+      <p><%= link_to 'See more details', event_path(event) %></p>
+      <% if current_user.profile.is_artist %>
+         <%= link_to "Confirm event", confirm_event_path(event), class: "b-border-tbg" %>
+      <% end %>
+      <% if current_user.profile.is_bar_manager %>
+        <p><%= link_to 'Edit event', edit_event_path(event) %></p>
+        <p><%= link_to 'Delete event', event_path(event), method: :delete, data: { confirm: "Are you sure?" } %></p>
+      <%end%>
 
+    </div>
   </div>
-</div>
 <% end %>
 
  <h1>Current Events</h1>
@@ -44,16 +43,27 @@
 
 <% @past_events.each do |event| %>
 
-<div class="card-product">
-  <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
-  <div class="card-product-infos">
-    <h2><%= event.name %></h2>
-    <p><%= event[:description] %></p>
-    <% if current_user.profile.is_bar_manager %>
-      <p><%= link_to 'Edit event', edit_event_path(event) %></p>
-      <p><%= link_to 'Delete event', event_path(event), method: :delete, data: { confirm: "Are you sure?" } %></p>
-    <%end%>
+  <div class="card-product">
+    <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
+    <div class="card-product-infos">
+      <h2><%= event.name %></h2>
+      <p><%= event[:description] %></p>
 
+      <% if current_user.profile.is_bar_manager %>
+        <p><%= link_to 'Edit event', edit_event_path(event) %></p>
+        <p><%= link_to 'Delete event', event_path(event), method: :delete, data: { confirm: "Are you sure?" } %></p>
+      <%end%>
+
+      <% if @review %>
+        <p><%= @review[:content] %></p>
+        <p><%= @review[:rating] %></p>
+        <p><%= link_to 'Edit this review', edit_event_review_path(event, @review) %></p>
+        <p><%= link_to 'Delete this review', event_review_path(event, @review), method: :delete, data: { confirm: "Are you sure?" } %></p>
+      <% else %>
+        <%= link_to 'Add a review', new_event_review_path(event) %>
+      <% end %>
+
+    </div>
   </div>
-</div>
+
 <% end %>
