--- a/app/views/bars/_form.html.erb
+++ b/app/views/bars/_form.html.erb
@@ -12,5 +12,5 @@
               required: true,
               autofocus: true,
               input_html: { autocomplete: "description" }%>
-  <%= b.button :submit, "Submit" %>
+  <%= b.button :submit, "Submit", class: "b-border-tbg" %>
 <% end %>
