--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -32,7 +32,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Save", class: "btd-yel" %>
+    <%= f.button :submit, "Save", class: "b-border-tbg" %>
   </div>
 <% end %>
 </div>
