--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -14,7 +14,7 @@
           <% end %>
           <%= f.input :address %>
         </div>
-      <%= f.button :submit, "Update profile" %>
+      <%= f.button :submit, "Update profile", class:"b-border-tbg" %>
     <% end %>
 
   <% end %>
