--- a/app/views/bars/_bar-banner.html.erb
+++ b/app/views/bars/_bar-banner.html.erb
@@ -22,13 +22,22 @@
 
 <%end%>
 
+
 <% if @pictures[0] && !@pictures[1]%>
 
   <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @pictures[0].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>');">
     <div class="container">
       <h1><%= @bar[:name].capitalize %> </h1>
       <h3><%= @bar[:description] %></h3>
-      <p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
+       <% if current_user == @bar.user %>
+
+        <br><br><p><%= link_to 'Add pictures', new_bar_picture_path(@bar), class:"bw-border-tbg" if current_user == @bar.user %></p>
+
+      <% else %>
+
+        <br><br><p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
+      <%end%>
+
       <h3><% if current_user.profile && (current_user.bars.empty? && current_user.profile.is_artist) %>
         <%= link_to "Contact this bar !", new_profile_chatbox_path(@bar.user.profile), class:"b-border-tbg" %>
         <% end %></h3>
@@ -124,7 +133,16 @@
 
   <div class="container">
     <br><h3><%= @bar[:description] %></h3>
-    <p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
+
+      <% if current_user == @bar.user %>
+
+        <br><p><%= link_to 'Add pictures', new_bar_picture_path(@bar), class:"b-border-tbg" if current_user == @bar.user %></p>
+
+      <% else %>
+
+        <br><br><p><%= link_to "See #{@bar.user.profile.username.capitalize}'s profile", profile_path(@bar.user.profile), class:"blue-link" %> </p>
+      <%end%>
+
     <h3><% if current_user.profile && (current_user.bars.empty? && current_user.profile.is_artist) %>
           <%= link_to "Contact this bar !", new_profile_chatbox_path(@bar.user.profile), class:"b-border-tbg" %>
         <% end %></h3>
