--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,16 +1,27 @@
 <div class="container">
-  <h1>BAR INDEX</h1>
-  <% @bars.each do |bar| %>
-    <%= link_to bar[:name], bar_path(bar) %>
-  <% end %>
-
-      <div
+  <h1>Search for a bar nearby</h1>
+        <div
       id="map"
       style="width: 100%;
       height: 300px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
+
+  <br><h1>All bars</h1>
+  <div class="cards-grid-4">
+    <% @bars.each do |bar| %>
+    <div class="card-img-v">
+      <% if !bar.pictures.empty? %>
+        <%= cl_image_tag bar.pictures[0].photo, width: 200, height: 200, crop: :fill %>
+      <%end%>
+      <div class="left-description">
+      <h3><%= link_to bar.name, bar_path(bar), class:"blue-link" %></h3>
+      </div>
+    </div>
+    <% end %>
+  </div>
+
 </div>
 
 
