--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -8,13 +8,13 @@
   <div class="card-product-infos">
     <h2><%= event.name %></h2>
     <p><%= event[:description] %></p>
-    <p><%= link_to 'See more details', event_path(event) %></p>
+    <p><%= link_to 'See more details', event_path(event), class: "b-border-tbg" %></p>
     <% if current_user.profile.is_artist %>
        <%= link_to "Confirm event", confirm_event_path(event), class: "b-border-tbg" %>
     <% end %>
     <% if current_user.profile.is_bar_manager %>
-      <p><%= link_to 'Edit event', edit_event_path(event) %></p>
-      <p><%= link_to 'Delete event', event_path(event), method: :delete, data: { confirm: "Are you sure?" } %></p>
+      <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
+      <p><%= link_to 'Delete event', event_path(event), method: :delete, class: "b-border-tbg", data: { confirm: "Are you sure?" } %></p>
     <%end%>
 
   </div>
@@ -30,10 +30,10 @@
   <div class="card-product-infos">
     <h2><%= event.name %></h2>
     <p><%= event[:description] %></p>
-    <p><%= link_to 'See more details', event_path(event) %></p>
+    <p><%= link_to 'See more details', event_path(event), class: "b-border-tbg" %></p>
     <% if current_user.profile.is_bar_manager %>
-      <p><%= link_to 'Edit event', edit_event_path(event) %></p>
-      <p><%= link_to 'Delete event', event_path(event), method: :delete, data: { confirm: "Are you sure?" } %></p>
+      <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
+      <p><%= link_to 'Delete event', event_path(event), method: :delete, class: "b-border-tbg", data: { confirm: "Are you sure?" } %></p>
     <%end%>
 
   </div>
@@ -50,8 +50,8 @@
     <h2><%= event.name %></h2>
     <p><%= event[:description] %></p>
     <% if current_user.profile.is_bar_manager %>
-      <p><%= link_to 'Edit event', edit_event_path(event) %></p>
-      <p><%= link_to 'Delete event', event_path(event), method: :delete, data: { confirm: "Are you sure?" } %></p>
+      <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
+      <p><%= link_to 'Delete event', event_path(event), class: "b-border-tbg", method: :delete, data: { confirm: "Are you sure?" } %></p>
     <%end%>
 
   </div>
