--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,17 +1,28 @@
 <div class="container">
-  <h1>Profiles#index</h1>
-  <h1>ALL ARTISTS</h1>
-  <% @artists.each do |artist| %>
-    <%= link_to artist[:username], profile_path(artist) %>
-  <% end %>
-
-
-      <div
+  <h1>Search for an artist in your neighbourhood</h1>
+        <div
       id="map"
       style="width: 100%;
       height: 300px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
+
+  <br><h1>All artists</h1>
+  <div class="cards-grid-4">
+  <% @artists.each do |artist| %>
+    <div class="card-img-v">
+      <% if artist.photo %>
+        <%= cl_image_tag artist.photo, width: 200, height: 200, crop: :fill %>
+      <%end%>
+      <div class="left-description">
+      <h3><%= link_to artist.username, profile_path(artist), class:"blue-link" %></h3>
+      </div>
+    </div>
+    <% end %>
+  </div>
+
 </div>
+
+
 
