--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -125,3 +125,84 @@
     color: $bv-hangar;
   }
 }
+
+.card {
+  height: 275px;
+  background-size: cover !important;
+  background-position: center;
+  position: relative;
+  margin-top: 20px;
+}
+
+
+
+.background-transparant {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0);
+  transition: background 0.5s ease;
+}
+
+.card:hover .background-transparant {
+  display: block;
+  background: rgba(255, 255, 255, .3);
+      display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card:hover .button {
+  opacity: 1;
+}
+
+.card-remove-link {
+  color: #ffffff;
+  border-radius: 50%;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  transform: rotate(45deg);
+  opacity: 0.8;
+  &:hover {
+    color: white;
+    text-decoration: none;
+    opacity: 1;
+  }
+}
+
+.card-tags {
+  position: absolute;
+  padding: 8px;
+  top: 10px;
+  opacity: 1;
+}
+
+.button {
+  color: white ;
+  padding: 5px 15px;
+  border-radius: 5px;
+  border: 1px solid white;
+  box-shadow: 0 0 3px white;
+  text-align: center;
+  background: transparent;
+  letter-spacing: 2px;
+  position: absolute;
+  opacity: 0;
+  transition: opacity .35s ease;
+}
+
+.button:hover {
+  text-decoration: none;
+  color: white;
+}
+
+
