--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,29 +1,22 @@
 <%= render 'home-banner'%>
 
 <div class="container">
-  <h1>Pages#home</h1>
+  <div class="row">
+    <% @events.each do |event| %>
+      <div class="col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
+          <div class="background-transparant">
 
-  <%= link_to "Discover our Artists", profiles_path, class: "b-border-tbg" %>
-  <%= link_to "Discover our bars", bars_path, class: "b-border-tbg" %>
-
-  <% @events.each do |event| %>
-
-  <div class="card-product">
-    <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
-    <div class="card-product-infos">
-      <h2><%= event.name %></h2>
-      <p><%= event[:description] %></p>
-      <% if current_user %>
-        <p><%= link_to 'See more details', event_path(event) %></p>
-      <% else %>
-        <p><%= link_to 'See more details', preview_event_path(event) %></p>
-      <%end%>
-
-    </div>
+                <p><%= link_to "Preview event", preview_event_path(event), class: "button" %></p>
+          </div>
+          <%= link_to "+", event_path(event), method: :delete, data: { confirm: "Are you sure?" }, class: "card-remove-link" %>
+        </div>
+      </div>
+    <% end %>
   </div>
-
-  <% end %>
 </div>
+
+
 
 
 
