--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -1,7 +1,7 @@
 
 .message-sent {
   margin: 10px;
-  width: 300px;
+  width: 60%;
   flex-shrink: 1;
   margin-left: 40%;
   display: flex;
@@ -44,8 +44,9 @@
   }
   textarea {
   border: 1px solid $bv-hangar !important;
-  border-radius: 30px !important;
+  border-radius: 10px !important;
   }
+  margin-top: 20px;
 }
 
 .send {
@@ -53,8 +54,8 @@
   width: 40px;
   height: 40px;
   position: relative;
-  top: -65px;
-  left: 90%;
+  top: -95px;
+  left: 70%;
   padding: 5px;
   border-radius: 50%;
   background:$white ;
@@ -74,12 +75,26 @@
 .m-content {
   p {
     color: $bv-hangar;
-    font-size: 1em;
+    font-size: 12px;
   }
   h2 {
-    font-size: 2em;
+    font-size: 20px;
   }
   h3 {
-  font-size: 1.5em;
+  font-size: 16px;
   }
+}
+
+.new_chatbox {
+  text-align: center;
+  margin: 10px auto;
+  .first-input {
+  border: 1px solid $bv-hangar !important;
+  border-radius: 10px !important;
+  height: 50px;
+  width: 80%;
+  padding: 10px;
+  }
+
+
 }
