--- a/app/views/chatboxes/new.html.erb
+++ b/app/views/chatboxes/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="card-login">
-    <h1>SEND your msg</h1>
+    <h1><%="say hi to #{Profile.find(params[:profile_id]).username} !"%></h1>
     <%= simple_form_for [@profile, Chatbox.new] do |b| %>
       <%= b.error_notification %>
-      <%= text_field_tag "message[content]" %>
-      <%= b.button :submit, "Send", class: "b-border-tbg" %>
+      <%= text_field_tag 'message[content]',nil , class: 'first-input', placeholder: "  Type your message here ..." %>
+      <br><br><%= b.button :submit, "Go ✨", class: "b-border-tbg" %>
     <% end %>
   </div>
 </div>
