--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,5 +10,5 @@
   <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
 
-  <%= f.button :submit, "Submit" %>
+  <%= f.button :submit, "Submit", class: "b-border-tbg" %>
 <% end %>
