--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,2 +1,6 @@
-<h1>EVENT INFOS</h1>
-<%= render 'form' %>
+<div class="container">
+  <h1>create a new event</h1>
+  <div class="card-login">
+    <%= render 'form' %>
+  </div>
+</div>
