--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -1,59 +1,63 @@
-<h1>Unconfirmed Events</h1>
+<div class="container">
+
+  <h1>Unconfirmed Events</h1>
 
 
-<% @unconfirmed_events.each do |event| %>
+  <% @unconfirmed_events.each do |event| %>
 
-<div class="card-product">
-  <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
-  <div class="card-product-infos">
-    <h2><%= event.name %></h2>
-    <p><%= event[:description] %></p>
-    <p><%= link_to 'See more details', event_path(event), class: "b-border-tbg" %></p>
-    <% if current_user.profile.is_artist %>
-       <%= link_to "Confirm event", confirm_event_path(event), class: "b-border-tbg" %>
-    <% end %>
-    <% if current_user.profile.is_bar_manager %>
-      <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
-      <p><%= link_to 'Delete event', event_path(event), method: :delete, class: "b-border-tbg", data: { confirm: "Are you sure?" } %></p>
-    <%end%>
+  <div class="card-product">
+    <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
+    <div class="card-product-infos">
+      <h2><%= event.name %></h2>
+      <p><%= event[:description] %></p>
+      <p><%= link_to 'See more details', event_path(event), class: "b-border-tbg" %></p>
+      <% if current_user.profile.is_artist %>
+         <%= link_to "Confirm event", confirm_event_path(event), class: "b-border-tbg" %>
+      <% end %>
+      <% if current_user.profile.is_bar_manager %>
+        <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
+        <p><%= link_to 'Delete event', event_path(event), method: :delete, class: "b-border-tbg", data: { confirm: "Are you sure?" } %></p>
+      <%end%>
 
+    </div>
   </div>
-</div>
-<% end %>
+  <% end %>
 
- <h1>Current Events</h1>
+   <h1>Current Events</h1>
 
-<% @current_events.each do |event| %>
+  <% @current_events.each do |event| %>
 
-<div class="card-product">
-  <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
-  <div class="card-product-infos">
-    <h2><%= event.name %></h2>
-    <p><%= event[:description] %></p>
-    <p><%= link_to 'See more details', event_path(event), class: "b-border-tbg" %></p>
-    <% if current_user.profile.is_bar_manager %>
-      <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
-      <p><%= link_to 'Delete event', event_path(event), method: :delete, class: "b-border-tbg", data: { confirm: "Are you sure?" } %></p>
-    <%end%>
+  <div class="card-product">
+    <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
+    <div class="card-product-infos">
+      <h2><%= event.name %></h2>
+      <p><%= event[:description] %></p>
+      <p><%= link_to 'See more details', event_path(event), class: "b-border-tbg" %></p>
+      <% if current_user.profile.is_bar_manager %>
+        <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
+        <p><%= link_to 'Delete event', event_path(event), method: :delete, class: "b-border-tbg", data: { confirm: "Are you sure?" } %></p>
+      <%end%>
 
+    </div>
   </div>
-</div>
-<% end %>
+  <% end %>
 
-<h1>Past Events</h1>
+  <h1>Past Events</h1>
 
-<% @past_events.each do |event| %>
+  <% @past_events.each do |event| %>
 
-<div class="card-product">
-  <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
-  <div class="card-product-infos">
-    <h2><%= event.name %></h2>
-    <p><%= event[:description] %></p>
-    <% if current_user.profile.is_bar_manager %>
-      <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
-      <p><%= link_to 'Delete event', event_path(event), class: "b-border-tbg", method: :delete, data: { confirm: "Are you sure?" } %></p>
-    <%end%>
+  <div class="card-product">
+    <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
+    <div class="card-product-infos">
+      <h2><%= event.name %></h2>
+      <p><%= event[:description] %></p>
+      <% if current_user.profile.is_bar_manager %>
+        <p><%= link_to 'Edit event', edit_event_path(event), class: "b-border-tbg" %></p>
+        <p><%= link_to 'Delete event', event_path(event), class: "b-border-tbg", method: :delete, data: { confirm: "Are you sure?" } %></p>
+      <%end%>
 
+    </div>
   </div>
+  <% end %>
+
 </div>
-<% end %>
