--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -142,26 +142,21 @@
   background-position: center;
   position: relative;
   margin-top: 20px;
-}
-
-
-
-.background-transparant {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0);
-  transition: background 0.5s ease;
-}
-
-.card:hover .background-transparant {
-  display: block;
-  background: rgba(255, 255, 255, .3);
-      display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.layer {
+  height: 100%;
+  width: 100%;
+  background: rgba(255, 255, 255, 0);
+  transition: background 0.5s ease;
+  text-align: center;
+}
+
+.card:hover .layer {
+  display: block;
+  background: rgba(255, 255, 255, .3);
 }
 
 .card:hover .button {
@@ -197,7 +192,7 @@
 }
 
 .button {
-  color: white ;
+  color: white;
   padding: 5px 15px;
   border-radius: 5px;
   border: 1px solid white;
@@ -205,14 +200,24 @@
   text-align: center;
   background: transparent;
   letter-spacing: 2px;
-  position: absolute;
-  opacity: 0;
+  opacity: 1;
   transition: opacity .35s ease;
 }
 
 .button:hover {
-  text-decoration: none;
-  color: white;
+  color: black;
+  background: white;
 }
+
+.title {
+  font-weight: 700;
+  font-size: 30px;
+  text-transform: uppercase;
+  color: white;
+  transition: top .5s ease;
+}
+
+
+
 
 
