--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,18 +1,41 @@
 <%=render 'event-banner'%>
 
 <div class="container">
-  <div class="card-login">
 
- <h3>What</h3>
- <p><%= @event[:description] %></p>
-  <h3>When</h3>
   <p><%= @event[:start_date].strftime("From: %d %B %Y at %Hh%M") %></p>
   <p><%= @event[:end_date].strftime("To: %d %B %Y at %Hh%M") %></p>
+
+    <div class="cards-grid-3quarter">
+
+      <div class="left">
+        <h1><%= link_to @artist[:username].capitalize, profile_path(@artist),class:"blue-link" %></h1>
+        <div class="card-profile">
+        <%= cl_image_tag @artist.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
+          <div class="left-description">
+            <h3>
+              <%= @artist.artist_description %>
+            </h3>
+            <h3><%= link_to "See more", profile_path(@artist),class:"b-border-tbg" %></h3>
+          </div>
+        </div>
+      </div>
+
+      <div class="right">
+        <h1><%= link_to @event.bar.name, bar_path(@event.bar), class:"blue-link"%></h1>
+        <div
+          id="map"
+          style="width: 100%;
+          height: 400px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+          data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+        ></div>
+      </div>
+
+    </div>
 
       <% if current_user.profile.is_bar_manager %>
         <p><%= link_to 'Edit event', edit_event_path(@event), class: "b-border-tbg" %></p>
         <p><%= link_to 'Delete event', event_path(@event), method: :delete, class: "b-border-tbg", data: { confirm: "Are you sure?" } %></p>
       <%end%>
 
-  </div>
 </div>
