--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,15 @@
   <%= link_to "Discover our Artists", profiles_path, class: "b-border-tbg" %>
   <%= link_to "Discover our bars", bars_path, class: "b-border-tbg" %>
 
+  <br><h1>Search for an event nearby !</h1>
+        <div
+      id="map"
+      style="width: 100%;
+      height: 300px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
+
   <% @events.each do |event| %>
 
   <div class="card-product">
