--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -218,6 +218,18 @@
   transition: top .5s ease;
 }
 
+.links_artist_bar {
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.links_artist_bar h3 {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
 
 
 
