--- a/app/views/events/_event-banner.html.erb
+++ b/app/views/events/_event-banner.html.erb
@@ -1,6 +1,25 @@
-  <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @event.photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>');">
-    <div class="container">
-      <h1><%= @event[:name]%> </h1>
-    </div>
-  </div>
+<% if @event[:photo] %>
 
+    <div class="banner-event" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @event.photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>');">
+      <div class="container">
+        <h1><%= @event[:name]%> </h1>
+        <br><div class="e-date">
+          <h3><%= @event[:start_date].strftime("%d %B %Y | %Hh%M") %></h3>
+            <h3>  <%= @event[:end_date].strftime("- %d %B %Y | %Hh%M") %></h3>
+      </div>
+      </div>
+    </div>
+
+<%else%>
+
+    <div class="banner-event" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/oXOIH4UAixo/1200x600);">
+      <div class="container">
+        <h1><%= @event[:name]%> </h1>
+        <br><div class="e-date">
+          <h3><%= @event[:start_date].strftime("%d %B %Y | %Hh%M") %></h3>
+            <h3>  <%= @event[:end_date].strftime("- %d %B %Y | %Hh%M") %></h3>
+      </div>
+      </div>
+    </div>
+
+<%end%>
