--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,8 +2,32 @@
 h1 {
   font-family: $bebas;
   color: $bv-hangar;
+  font-size: 4em;
+}
+
+h2 {
+  font-size: 2.5em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4{
+ font-size: 1.5em;
+}
+
+p {
+  font-size: 1em;
 }
 
 b {
   background-color: white;
+}
+
+.left, .right {
+  h2 {
+    font-family:$bebas;
+    color: $bv-hangar;
+  }
 }
