--- a/app/views/bars/_bar-banner.html.erb
+++ b/app/views/bars/_bar-banner.html.erb
@@ -1,7 +1,7 @@
   <!--Default banners when 0 or 1 pic only -->
 <% if !@pictures[0]%>
 
-  <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/oXOIH4UAixo/1200x600" alt="First slide);">
+  <div class="banner-bar" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/oXOIH4UAixo/1200x600);">
     <div class="container">
       <h1><%= @bar[:name].capitalize %></h1>
       <h3><%= @bar[:description] %></h3>
