--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -1,12 +1,19 @@
 <div class="container">
   <h1>YOUR MESSAGES</h1>
   <% @chatboxes.each do |hash| %>
-
-    <%# if !@last_msgs_content[i].nil? %>
-      <p>CONVO WITH: <%= hash[:partners_name ] %></p>
-      <p>LAST MSG: <%= hash[:last_msgs_content] %></p>
-      <p>from: <%= hash[:last_msgs_username] %></p>
-      <%= link_to "Read previous", chatbox_path(hash[:id]) %>
-    <%# end %>
+  <% if hash[:last_msgs_username] == current_user.profile.username %>
+      <div class="message-sent">
+  <% else %>
+      <div class="message-received">
+  <% end %>
+      <div class="prevchat">
+      <%# if !@last_msgs_content[i].nil? %>
+          <h3><%= link_to "CHAT WITH #{hash[:partners_name ]}", chatbox_path(hash[:id]),class: "blue-link" %></h3>
+          <p><%= hash[:last_msgs_username] %> sent:</p>
+          <h4><%= hash[:last_msgs_content] %></h4><br>
+          <%= link_to "Read previous", chatbox_path(hash[:id]),class: "b-border-tbg" %>
+      <%# end %>
+        </div>
+  </div>
   <% end %>
 </div>
